# devin-tier3-remediator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: README.md
knowledge/: superset_knowledge.yaml
playbooks/: dep_upgrade.devin.md  doc_drift.devin.md  js_to_ts.devin.md  lint_debt.devin.md  security_fix.devin.md
scripts/: issues.json  load_env.py  setup_knowledge.py
src/: dashboard.py  db.py  devin_client.py  orchestrator.py  poller.py  webhook.py
tests/: test_orchestrator.py  test_webhook.py
